minor misc changes:
* make dark theme default
* use bower managed three.js library (R73)
* rename local storage key to '3ditor'

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,9 +7,9 @@
 	</head>
 	<body ontouchstart="">
 		<link href="legacy/editor/css/main.css" rel="stylesheet" />
-		<link id="theme" href="legacy/editor/css/light.css" rel="stylesheet" />
+		<link id="theme" href="legacy/editor/css/dark.css" rel="stylesheet" />
 
-		<script src="legacy/build/three.js"></script>
+		<script src="lib/three/index.js"></script>
 		<script src="legacy/examples/js/libs/system.min.js"></script>
 
 		<script src="legacy/examples/js/controls/EditorControls.js"></script>
